[package]
description = "A toolbox of basic data structures and algorithms"
edition = "2021"
homepage = "https://github.com/DennisOSRM/toolbox-rs"
license = "MIT"
name = "toolbox-rs"
readme = "README.md"
repository = "https://github.com/DennisOSRM/toolbox-rs"
version = "0.2.0"

[[example]]
name = "instantiate"

[[bin]]
name = "chipper"
path = "src/chipper/bin/main.rs"

[[bin]]
name = "scaffold"
path = "src/scaffold/bin/main.rs"

[[bin]]
name = "graph_plier"
path = "src/graph_plier/bin/main.rs"

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
fxhash = "0.2.1"
geojson = "0.24.1"
indicatif = "0.17.11"
itertools = "0.14.0"
log = "0.4.25"
num = "0.4.3"
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.16.0"
xxhash-rust = {version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true
lto = true

[[bench]]
name = "bench_main"
harness = false
