[package]
description = "A toolbox of basic data structures and algorithms"
edition = "2024"
homepage = "https://github.com/DennisOSRM/toolbox-rs"
license = "MIT"
name = "toolbox-rs"
readme = "README.md"
repository = "https://github.com/DennisOSRM/toolbox-rs"
version = "0.5.0"

[[example]]
name = "instantiate"

[[bin]]
name = "chipper"
path = "src/chipper/bin/main.rs"

[[bin]]
name = "scaffold"
path = "src/scaffold/bin/main.rs"

[[bin]]
name = "graph_plier"
path = "src/graph_plier/bin/main.rs"

[[bin]]
name = "tile_server"
path = "src/tile_server/bin/main.rs"

[dependencies]
actix-web = "4.10.2"
bincode = "2.0.0"
bitvec = "1.0.1"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
fxhash = "0.2.1"
geojson = "0.24.2"
indicatif = "0.17.11"
itertools = "0.14.0"
log = "0.4.27"
num = "0.4.3"
prost = "0.13.5"
rand = "0.9.1"
rayon = "1.10.0"
tempfile = "3.19.1"
thiserror = "2.0.12"
xxhash-rust = {version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
protobuf-codegen-pure = "2.28.0"
prost-build = "0.13.5"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
debug = true
lto = true

[[bench]]
name = "bench_main"
harness = false
