[package]
description = "A toolbox of basic data structures and algorithms"
edition = "2024"
homepage = "https://github.com/DennisOSRM/toolbox-rs"
license = "MIT"
name = "toolbox-rs"
readme = "README.md"
repository = "https://github.com/DennisOSRM/toolbox-rs"
version = "0.6.0"

[[example]]
name = "instantiate"

[[bin]]
name = "chipper"
path = "src/chipper/bin/main.rs"

[[bin]]
name = "scaffold"
path = "src/scaffold/bin/main.rs"

[[bin]]
name = "graph_plier"
path = "src/graph_plier/bin/main.rs"

[[bin]]
name = "solver"
path = "src/solver/bin/main.rs"

[dependencies]
bincode = "2.0.0"
bitvec = "1.0.1"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
fxhash = "0.2.1"
geojson = "0.24.1"
indicatif = "0.18.0"
itertools = "0.14.0"
log = "0.4.27"
num = "0.4.3"
rand = "0.9.1"
rayon = "1.10.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
xxhash-rust = {version = "0.8.15", features = ["xxh3"] }

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5.4"

[dev-dependencies]
criterion = "0.8.0"

[profile.release]
debug = true
lto = true

[[bench]]
name = "bench_main"
harness = false

[workspace.metadata.clippy]
# Enable additional clippy lints
extra_lints = ["clippy::pedantic", "clippy::nursery"]
